@@ -16,6 +16,8 @@ VERSION 1.3.x
 - Remove some old (1.1.x -> 1.2.0) upgrade notices from man page.
 - Allow linux_lvm_cmd_* in config file to have options also.
 - Allow `backticks with options` in include_conf.
+- Fix inaccurate omission of --link-dest in test-mode output:
+  http://sourceforge.net/mailarchive/forum.php?thread_name=4986E5A4.3090002%40Media-Brokers.com&forum_name=rsnapshot-discuss
 
 VERSION 1.3.1  (Aug 31 2008)
 ------------------------------------------------------------------------------
